# berlin-py

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE  LICENSE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml  python-cross-compile.yaml  python-publish.yml  rust-ci.yml
berlin/: __init__.py
berlin-core/: Cargo.toml  README.md
berlin-core/src/: coordinates.rs  graph.rs  json_decode.rs  lib.rs  location.rs  locations_db.rs  search.rs
berlin-py/: Cargo.toml  README.md  pyproject.toml
berlin-py/src/: lib.rs
berlin-web/: Cargo.toml
berlin-web/src/: fetch_handler.rs  lib.rs  location_json.rs  main.rs  search_handler.rs
data/: ISO-3166-2:GB.json  iata.json  state.json  subdivision.json
python/berlin/: __init__.py  _utils.py
scripts/: test.py
src/: lib.rs
tests/: conftest.py  test_berlin.py
tests/data/: test-code-list.csv  test-codes.json
