[package]
name = "berlin-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ustr = { version = "0.8.1", features = ["serde"] }
rayon = "1.5.1"

serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"

tracing = { version = "0.1.29", features = ["log"] }

strsim = "0.10.0"
priority-queue = "1.2.1"