[package]
name = "berlin-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ustr = { version = "0.8.1", features = ["serde"] }
regex = "1.5.4"
rayon = "1.5.1"
strum = "0.23.0"
strum_macros = "0.23.1"

serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"

tracing = { version = "0.1.29", features = ["log"] }

deunicode = "1.3.1"

strsim = "0.10.0"
fuzzy-matcher = "0.3.7"
sublime_fuzzy = "0.7.0"