[package]
name = "berlin-py"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "berlin"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.15.1", features = ["extension-module"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
berlin-core = { path = "../berlin-core" }
berlin-web = { path = "../berlin-web" }
# Logging
tracing = "0.1.29"
tracing-futures = "0.2.5"
tracing-log = "0.1.2"
tracing-subscriber = "0.3.1"
