[tool.poetry]
name = "berlin"
version = "0.1.0"
description = ""
authors = [
    "Metin Akat <metin.akat@flaxandteal.co.uk>",
    "Phil Weir <phil.weir@flaxandteal.co.uk>"
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
maturin = "^0.12.9"

[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project]
name = "berlin"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

