[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project]
name = "berlin"
authors = [
    {name = "Metin Akat", email = "metin.akat@flaxandteal.co.uk"},
    {name = "Phil Weir", email = "phil.weir@flaxandteal.co.uk"}
]
version = "0.3.0"
description = "Identify locations and tag them with UN-LOCODEs and ISO-3166-2 subdivisions."
readme = "../README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

