[package]
name = "berlin-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
berlin-core = { path = "../berlin-core" }
dirs = "4.0.0"
promptly = "0.3.0"

serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"

# CLI args parsing
structopt = "0.3.25"

# Logging
tracing = "0.1.29"
tracing-futures = "0.2.5"
tracing-log = "0.1.2"
tracing-subscriber = "0.3.1"
